[gd_scene load_steps=7 format=3 uid="uid://cf7hfdotqfat4"]

[ext_resource type="Script" uid="uid://dbu5my7nq7jaq" path="res://Menu/menu.gd" id="1_rwxi6"]
[ext_resource type="Texture2D" uid="uid://by3gmmccu5aj7" path="res://Assets/Fonts e Imagenes/planet1.PNG" id="2_8w4re"]
[ext_resource type="AudioStream" uid="uid://d3uteaeyexb1f" path="res://Assets/Sonidos/Musica/nave menu.wav" id="2_ihied"]
[ext_resource type="FontFile" uid="uid://b6tlguvuo0bes" path="res://Assets/Fonts e Imagenes/PressStart2P.ttf" id="2_raj00"]

[sub_resource type="FontVariation" id="FontVariation_8w4re"]
base_font = ExtResource("2_raj00")

[sub_resource type="FontVariation" id="FontVariation_ofseh"]
base_font = ExtResource("2_raj00")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwxi6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(244, 448)
scale = Vector2(0.854254, 0.784179)
texture = ExtResource("2_8w4re")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -229.0
offset_top = -349.0
offset_right = 229.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50

[node name="Jugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_8w4re")
theme_override_font_sizes/font_size = 50
text = "Jugar"

[node name="controles" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_8w4re")
theme_override_font_sizes/font_size = 50
text = "controles"

[node name="Salir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ofseh")
theme_override_font_sizes/font_size = 50
text = "Salir"

[node name="MusicaMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ihied")
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 817.0
offset_right = 811.0
offset_bottom = 860.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_raj00")
theme_override_font_sizes/font_size = 20
text = "Juego para \"Motores de videojuegos\" 
UNSO - Grupo 7"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
